[project]
name = "ComfyUI_AC_FunV6.0"
description = "For ComfyUI OSS Tools,Upload To Remote"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/A719689614/AC_FunV6.0/tree/master"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "acheng"
DisplayName = "ComfyUI_AC_FunV6.0"
Icon = "https://avatars.githubusercontent.com/u/142242136?v=4"
